Telas quase pronta

--- a/www/consultar.html
+++ b/www/consultar.html
@@ -10,17 +10,25 @@
   <script src="components/acao.js"> </script>
 
   <link rel="stylesheet" href="components/loader.css">
-  <link rel="stylesheet" href="css/stylee.css">
+  <link rel="stylesheet" href="css/styleconsultar.css">
 </head>
 <body>
-<h1 onclick="location.href=index.html"> Estacionamento jujubinha</h1>
+<a href="index.html" style="text-decoration:none">  <h1> Estacionamento jujubinha </h1> </a>
+<h2> Consultar automovéis </h2>
 
 <nav>
-	<a href="cadastrar.html">Cadastrar</a>
 	<a href="consultar.html">Consultar</a>
+	<a href="cadastrar.html">Cadastrar</a>
 	<a href="historico.html">Histórico</a>
 	<div class="animation start-home"></div>
 </nav>
+
+<div class="busca">
+  <input type="text" placeholder="Buscar Veiculo" class="buscarVeiculo">
+</div>
+
+<div class="dados">
+</div>
 
 </body>
 </html>
