--- a/www/cadastrar.html
+++ b/www/cadastrar.html
@@ -6,44 +6,76 @@
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <script src="components/loader.js"></script>
   <script src="lib/onsenui/js/onsenui.min.js"></script>
-  <script src="components/jquery-3.4.1.min.js"> </script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="components/acao.js"> </script>
 
   <link rel="stylesheet" href="components/loader.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styleCadastro.css">
 </head>
 <body>
-<a href="index.html" style="text-decoration:none">  <h1> Estacionamento jujubinha </h1> </a>
-<h2> Cadastro de automovéis </h2>
+<h3 style="margin-top:5vh; text-align: center;margin-bottom: 2vh"> Cadastro de Permanência </h3>
 
-<nav>
-	<a class="active" href="cadastrar.html">Cadastrar</a>
-	<a href="consultar.html">Consultar</a>
-	<a href="historico.html">Histórico</a>
-	<div class="animation start-home"></div>
-</nav>
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link" href="index.html">HOME</a>
+  </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CADASTRAR</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="cadastrarCarro.html">Carro</a>
+      <a class="dropdown-item" href="cadastrarUsuario.html">Usuário</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="cadastrar.html">Permanência</a>
+    </div>
+  </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CONSULTAR</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item disabled" aria-disabled="true">Veículos</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="cadastrar.html">Não saíram</a>
+      <a class="dropdown-item" href="cadastrar.html">Saíram</a>
+    </div>
+  </li>
+</ul>
 
-<div class="cadastro">
-  <div class="nome">
-    <input type="text" class="nomeProp" placeholder="Nome do proprietário">
-  </div>
-  <div class="hora">
-      <label for=""> Hora de entrada </label>
-      <input type="time" id="horario" value="13:30">
-  </div>
-  <div class="marca">
-    <input type="text" class="nomeProp" placeholder="Marca">
-  </div>
-  <div class="modelo">
-    <input type="text" class="nomeProp" placeholder="Modelo">
-  </div>
-  <div class="tipo">
-    <input type="text" class="nomeProp" placeholder="Tipo">
-  </div>
-  <div class="placa">
-    <input type="text" class="nomeProp" placeholder="Placa">
+<div class="container">
+
+<div class="row nome">
+  <div class="col">
+    <select class="nomeProp" id="propietario">
+      <option selected disabled> Nome do proprietário </option>
+    </select>
   </div>
 </div>
-
+  <label for=""> Hora de entrada </label>
+  <div class=" row">
+    <div class="col-6">
+      <select id="horaEntrada" class="form-control opt">
+        <option disabled selected> Hora </option>
+      </select>
+    </div>
+    <div class="col-6">
+      <select id="minutoEntrada" class="form-control opt">
+        <option disabled selected> Minuto </option>
+      </select>
+    </div>
+  </div>
+  <div class="row placa">
+    <div class="col">
+    <select class="nomeProp" id="placa">
+      <option selected disabled> Placa </option>
+    </select>
+    </div>
+  </div>
+  <div class="row placa">
+    <div class="col">
+      <button id="salvar" class="btn btn-primary btn-block"> Cadastrar </button>
+    </div>
+  </div>
+  </div>
 </body>
 </html>
