--- a/www/listarNaoSairam.html
+++ b/www/listarNaoSairam.html
@@ -6,34 +6,33 @@
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <script src="components/loader.js"></script>
   <script src="lib/onsenui/js/onsenui.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="components/acao.js"> </script>
 
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/stylee.css">
+  <link rel="stylesheet" href="css/styleCadastro.css">
 </head>
 <body>
-<h1 onclick="location.href=index.html"> Estacionamento jujubinha</h1>
+<h3 style="margin-top:5vh; text-align: center;margin-bottom: 2vh"> Consultar automovéis </h3>
 
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" href="index.html">HOME</a>
+    <a class="nav-link" href="index.html">HOME</a>
   </li>
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CADASTRAR</a>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="cadastrarCarro.html">Veiculo</a>
+      <a class="dropdown-item" href="cadastrarCarro.html">Veículo</a>
       <a class="dropdown-item" href="cadastrarUsuario.html">Usuário</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="cadastrar.html">Permanência</a>
     </div>
   </li>
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CONSULTAR</a>
+    <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CONSULTAR</a>
     <div class="dropdown-menu">
       <a class="dropdown-item disabled" aria-disabled="true">Veículos</a>
       <div class="dropdown-divider"></div>
@@ -44,5 +43,20 @@
   
 </ul>
 
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <input type="text" placeholder="Buscar Veiculo" class="inputs" style="margin-top: 3vh">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <div class="dados">
+      </div>
+    </div>
+  </div>
+
+</div>
 </body>
 </html>
