--- a/www/cadastrarCarro.html
+++ b/www/cadastrarCarro.html
@@ -6,7 +6,8 @@
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <script src="components/loader.js"></script>
   <script src="lib/onsenui/js/onsenui.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="components/acao.js"> </script>
@@ -16,7 +17,7 @@
   <link rel="stylesheet" href="css/styleCadastro.css">
 </head>
 <body>
-<h3 style="margin-top:5vh; text-align: center;margin-bottom: 2vh"> Cadastro de Carro </h3>
+<h3 style="margin-top:5vh; text-align: center;margin-bottom: 2vh"> Cadastro de Veículo </h3>
 
 <ul class="nav nav-tabs">
   <li class="nav-item">
@@ -25,7 +26,7 @@
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CADASTRAR</a>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="cadastrarCarro.html">Carro</a>
+      <a class="dropdown-item" href="cadastrarCarro.html">Veiculo</a>
       <a class="dropdown-item" href="cadastrarUsuario.html">Usuário</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="cadastrar.html">Permanência</a>
@@ -46,7 +47,7 @@
 
 <div class="row nome">
   <div class="col">
-    <select class="nomeProp" id="propietario">
+    <select class="nomeProp" id="selectPropietario">
       <option selected disabled> Nome do proprietário </option>
     </select>
   </div>
@@ -68,13 +69,17 @@
 </div>
 <div class="row placa">
   <div class="col">
-    <input type="text" id="tipo" class="inputs" placeholder="Tipo de Veiculo">
+    <select id="veiculo" class="form-control opt">
+        <option disabled selected> Tipo de Veiculo </option>
+        <option value="Carro"> Carro </option>
+        <option value="Moto"> Moto </option>
+      </select>
   </div>
 </div>
 
   <div class="row placa">
     <div class="col">
-      <button id="salvar" class="btn btn-primary btn-block"> Cadastrar </button>
+      <button id="salvarCarro" class="btn btn-primary btn-block"> Cadastrar </button>
     </div>
   </div>
   </div>
