--- a/www/cadastrar.html
+++ b/www/cadastrar.html
@@ -21,6 +21,8 @@
       preencheHora();
       preencheMinuto();
     });
+
+    
   </script>
 
 </head>
@@ -82,7 +84,7 @@
   </div>
   <div class="row placa">
     <div class="col">
-      <button id="salvarPermanencia" class="btn btn-primary btn-block"> Cadastrar </button>
+      <button id="teste" class="btn btn-primary btn-block testBtn"> Cadastrar </button>
     </div>
   </div>
   </div>
